# StructureAnalysis

./: .gitignore  README.md  README.txt  TODO  __init__.py  autowig.py  build_vplants.py  char_ptr_to_string.py  install_stool.sh  install_vplants.py  multisetup.py  run_test.sh  test_commit_initialisation.txt
stat_tool/: .coveragerc  .cruft.json  .gitignore  .readthedocs.yml  AUTHORS.md  AUTHORS.txt  AutoWIG.py  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  ChangeLog.txt  README.md  README.txt  SConstruct  SConstructWIG  SConstruct_conda  autowig.sh  cmake_install.cmake  install_stool.sh  merge_info.txt  metainfo.ini  methodo.txt  pyproject.toml  refactor.txt  setup-egg.py  setup.cfg  setup.py
stat_tool/Model/: symphonia_serre7I.hmt  symphonia_serre7I.mix  symphonia_serre7Ib.hmt  symphonia_serre7Ib_init.hmt
stat_tool/Sample/: fichierfinal_symphonia_allong_22ind.txt
stat_tool/cmake/: wrapper.cmake
stat_tool/conda/: environment.yml  meta.yaml
stat_tool/debian/: changelog  control  copyright  python-vplants.stattool.preinst  rules
stat_tool/doc/: Doxyfile  Makefile  README  api.md  conf.py  contents.rst  extra.md  index.md  installation.md  postprocess.py  sphinx.ini  usage.md
stat_tool/doc/cpp/: doxygen.conf
stat_tool/doc/examples/: example1.ipynb  example2.ipynb
stat_tool/doc/pyplots/: binomial.py  example1.py  negative_binomial.py  poisson.py  uniform.py
stat_tool/doc/stat_tool/: api-objects.txt  class-tree.html  exceptions.OSError-class.html  frames.html  help.html  identifier-index.html  index.rst  module-tree.html  openalea.stat_tool-module.html  openalea.stat_tool-pysrc.html  openalea.stat_tool._stat_tool-module.html  openalea.stat_tool._stat_tool.MultiPlot-class.html  openalea.stat_tool._stat_tool.MultiPlotSet-class.html  openalea.stat_tool._stat_tool.PlotPoint-class.html  openalea.stat_tool._stat_tool.SinglePlot-class.html  openalea.stat_tool._stat_tool._Clusters-class.html  openalea.stat_tool._stat_tool._Convolution-class.html  openalea.stat_tool._stat_tool._ConvolutionData-class.html  openalea.stat_tool._stat_tool._ConvolutionDist-class.html  openalea.stat_tool._stat_tool._Convolution_data-class.html  openalea.stat_tool._stat_tool._Convolution_dist-class.html  openalea.stat_tool._stat_tool._Dendrogram-class.html  openalea.stat_tool._stat_tool._DistanceMatrix-class.html  openalea.stat_tool._stat_tool._Distribution-class.html  openalea.stat_tool._stat_tool._DistributionData-class.html  openalea.stat_tool._stat_tool._Distribution_data-class.html  openalea.stat_tool._stat_tool._FormatError-class.html  openalea.stat_tool._stat_tool._Format_error-class.html  openalea.stat_tool._stat_tool._Histogram-class.html  openalea.stat_tool._stat_tool._Mixture-class.html  openalea.stat_tool._stat_tool._MixtureData-class.html  openalea.stat_tool._stat_tool._MixtureDist-class.html  openalea.stat_tool._stat_tool._Mixture_data-class.html  openalea.stat_tool._stat_tool._Mixture_dist-class.html  openalea.stat_tool._stat_tool._Parametric-class.html  openalea.stat_tool._stat_tool._ParametricModel-class.html  openalea.stat_tool._stat_tool._Parametric_model-class.html  openalea.stat_tool._stat_tool._Regression-class.html  openalea.stat_tool._stat_tool._StatInterface-class.html  openalea.stat_tool._stat_tool._Stat_interface-class.html  (+164 more)
stat_tool/doc/user/: admin.rst  alias.rst  aml2py.py  aml2py.rst  autosum.rst  convolution.rst  description.rst  gnuplot_versus_matplotlib.rst  histogram.rst  index.rst  list.rst  overview.txt  plotting.py  plotting.rst  syntax.rst  syntax2.rst  troubleshooting.rst  tutorial.rst  vectors.rst  visualea_beech1.rst  visualea_oak_demo.rst
stat_tool/examples/: autowig.ipynb  exploratory.aml  exploratory.py  internodes_per_gu.ipynb  nodes_preformation_neoformation.ipynb
stat_tool/share/data/: peup5.his
stat_tool/src/cpp/: #stat_tools.h#  AutoWIG.py  SConscript  SConscriptWIG  categorical_process.cpp  chain.cpp  chain_algorithms.cpp  chain_reestimation.cpp  chain_reestimation.h  chain_reestimation.hpp  char_ptr_to_string.cpp  char_ptr_to_string.h  clusters.cpp  compound.cpp  compound.h  compound_algorithms.cpp  config.h  continuous_parametric.cpp  continuous_parametric_estimation.hpp  continuous_parametric_process.cpp  convolution.cpp  convolution.h  convolution_algorithms.cpp  curves.cpp  curves.h  dendrogram.cpp  discrete_mixture.cpp  discrete_mixture.h  discrete_mixture_algorithms.cpp  discrete_parametric.cpp  discrete_parametric_process.cpp  distance_matrix.cpp  distance_matrix.h  distribution.cpp  distribution.h  distribution_algorithms.cpp  (+38 more)
stat_tool/test/: README.md  README.txt  chene_sessile.vec  func_list.txt  mixture.aml  nothofagus_antarctica_bud_2.his  peup1.his  stat_tool_examples.py  stat_tool_sequence_analysis_class.txt  stat_tool_test.ipynb  stat_tool_test.py  stat_toot_test.aml  stat_toot_test.py  teest_mixture.cpp  teest_mixture.py  test_cluster.py  test_cluster_and_distance_matrix.py  test_comparison.py  test_compound.py  test_compound_functional.py  test_convolution.py  test_convolution_functional.py  test_data_transform.py  test_dataflow_stat.py  test_distance_matrix.py  test_distribution.py  test_distribution_functional.py  test_error.py  test_estimate.py  test_exploratory.py  test_histogram.py  test_histogram_functional.py  test_matrix.py  test_mixt.py  test_mixture.py  test_mixture_functional.py  test_multivariate_mixture.py  test_multivariate_mixture_functional.py  test_mv_mixture.py  test_mv_mixture_functional.py  (+12 more)
tree_matching/: CMakeLists.txt  README.rst  README.txt  SConstruct  environment.yaml  metainfo.ini  setup-egg.py  setup.cfg  setup.py
tree_matching/conda/: build.sh  meta.yaml
tree_matching/debian/: changelog  control  copyright  python-vplants.treematching.preinst  rules
tree_matching/doc/: contents.rst  sphinx.ini
tree_matching/test/: test_bipartitematching.py  test_extmatching.py  test_matchpath.py  test_mtgmatching.py  test_nodecost.py  test_pathmatching.py  test_pathmatching3.py  test_treegraph_iterator.py  test_treenode.py  tree_matching.py
tree_matching/tree_matching2/: setup.cfg
(+1830 files in other folders)
