[build-system]
requires = [
    "scikit-build-core",
    "setuptools",
    "setuptools_scm",
]
build-backend = "scikit_build_core.build"

# where your source lies if you followed src layout
[tool.setuptools.packages.find]
where = ["src"]
include = ["openalea.*"]

[tool.setuptools]
include-package-data = false # force explicit declaration of data (disable automatic inclusion)

[tool.setuptools.package-data]
"openalea.pkg_name" = ["data/**/*"]

# enable dynamic version based on git tags
[tool.setuptools_scm]
root = ".."

[tool.scikit-build]
build-dir = "./build/"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
logging.level = "WARNING"
build.verbose = true
editable.rebuild = true
experimental = true
## install.components = ["python", "headers", "library"]

[tool.scikit-build.cmake]
##args = ["-DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX", "-DCMAKE_INSTALL_INCLUDEDIR=include", "-DCMAKE_INSTALL_LIBDIR=lib"]
build-type = "Release"
source-dir = "."

[tool.scikit-build.wheel.packages]
"openalea/stat_tool" = "src/openalea/stat_tool"

[project]
name = "openalea.stat_tool"
authors = [
  { name = "Yann Guédon" },
  { name = "Jean-Baptiste Durand" },
  { name = "Pierre Fernique" },
  { name = "Christophe Pradal" },
  { name = "Thomas Cokelaer" },
  { name = "Sébastien Dufour" },
]
description = "Basic Statistical tools"
readme = "README.md"
license = "GPL-2.0"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

# you can list here all dependencies that are pip-instalable, and that have a name identical to the one used by conda (to allow reuse of this list in meta.yaml)
# If conda name is different, please do not declare the pip name, and declare conda name in the next section
dependencies = [
] # == install_requires

[project.optional-dependencies]
test = [
  "pytest",
  "nose",
  "nbmake",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
doc = [
  "sphinx-autobuild",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "ipykernel",
  "sphinx-copybutton",
  "ipython_genutils",
  "nbsphinx",
]

# section specific to conda-only distributed package (not used by pip yet)
[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
  "boost",
  "matplotlib-base",
]

[project.urls]
Repository = "https://github.com/openalea/StructureAnalysis/stat_tool"
Homepage = "https://stat_tool.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea/StructureAnalysis/issues"
Discussions = "https://github.com/openalea/StructureAnalysis/discussions"
Changelog = "https://github.com/openalea/StructureAnalysis/releases"

